<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".WelcomeActivity">


    <LinearLayout
        android:id="@+id/linear_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:alpha="0.8"
            android:background="@drawable/rounded_num_text"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/name"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_num_text"
                android:hint="@string/phone"
                android:textColorHint="@color/themeColor"
                android:textSize="@dimen/hint_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="1dp"
            android:alpha="0.8"
            android:background="@drawable/rounded_num_text"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/word"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_num_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/themeColor"
                android:textSize="@dimen/hint_text_size"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_below="@+id/linear_EditText"
        android:id="@+id/login_button_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_num_btn"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"/>

    <LinearLayout
        android:layout_below="@+id/login_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/callback_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/callback"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <TextView
        android:id="@+id/morenews_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/morenews"
        android:textColor="@color/orange"/>

</RelativeLayout>